--- a/InventoryManagementSystem/src/inventorymanagementsystem/IMSGUI.form
+++ b/InventoryManagementSystem/src/inventorymanagementsystem/IMSGUI.form
@@ -247,6 +247,9 @@
       </Properties>
     </Component>
     <Container class="javax.swing.JTabbedPane" name="categoryPane">
+      <Events>
+        <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="categoryPaneStateChanged"/>
+      </Events>
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout"/>
       <SubComponents>
@@ -296,12 +299,8 @@
                 <Component class="javax.swing.JList" name="inventoryList">
                   <Properties>
                     <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
-                      <StringArray count="5">
-                        <StringItem index="0" value="Trophies"/>
-                        <StringItem index="1" value="Vinyl"/>
-                        <StringItem index="2" value="Paper"/>
-                        <StringItem index="3" value="Toner"/>
-                        <StringItem index="4" value="Other"/>
+                      <StringArray count="1">
+                        <StringItem index="0" value="Error loading database..."/>
                       </StringArray>
                     </Property>
                     <Property name="selectionMode" type="int" value="0"/>
@@ -360,10 +359,8 @@
                 <Component class="javax.swing.JList" name="vendorList">
                   <Properties>
                     <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
-                      <StringArray count="3">
-                        <StringItem index="0" value="I don&apos;t know"/>
-                        <StringItem index="1" value="What vendors"/>
-                        <StringItem index="2" value="To put here"/>
+                      <StringArray count="1">
+                        <StringItem index="0" value="Error loading database..."/>
                       </StringArray>
                     </Property>
                   </Properties>
@@ -421,10 +418,8 @@
                 <Component class="javax.swing.JList" name="salesList">
                   <Properties>
                     <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
-                      <StringArray count="3">
-                        <StringItem index="0" value="Not sure"/>
-                        <StringItem index="1" value="What goes"/>
-                        <StringItem index="2" value="Here either"/>
+                      <StringArray count="1">
+                        <StringItem index="0" value="Error loading database..."/>
                       </StringArray>
                     </Property>
                   </Properties>
@@ -448,7 +443,7 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="460" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
