Added Users Controller
Able to  view users

--- a/InventoryManagementSystem/src/inventorymanagementsystem/IMSGUI.form
+++ b/InventoryManagementSystem/src/inventorymanagementsystem/IMSGUI.form
@@ -99,6 +99,38 @@
         </Component>
       </SubComponents>
     </Container>
+    <Component class="javax.swing.JButton" name="logInButton2">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Log in"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="logInButton2ActionPerformed"/>
+      </Events>
+    </Component>
+    <Container class="javax.swing.JPopupMenu" name="gearMenu">
+
+      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout">
+        <Property name="useNullLayout" type="boolean" value="true"/>
+      </Layout>
+      <SubComponents>
+        <MenuItem class="javax.swing.JMenuItem" name="logInButton">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Log In"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="logInButtonActionPerformed"/>
+          </Events>
+        </MenuItem>
+        <MenuItem class="javax.swing.JMenuItem" name="viewUserButton">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="View Users"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="viewUserButtonActionPerformed"/>
+          </Events>
+        </MenuItem>
+      </SubComponents>
+    </Container>
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
@@ -131,13 +163,13 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <Component id="jTextField1" pref="308" max="32767" attributes="0"/>
+                      <Component id="jTextField1" pref="302" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jButton1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="userDisplay" pref="201" max="32767" attributes="0"/>
+                      <Component id="userDisplay" min="-2" pref="236" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="logInButton" min="-2" max="-2" attributes="0"/>
+                      <Component id="gearIcon" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Component id="controllerDisplay" max="32767" attributes="0"/>
               </Group>
@@ -158,9 +190,11 @@
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="1" max="-2" attributes="0">
                           <Component id="jTextField1" alignment="0" max="32767" attributes="0"/>
-                          <Component id="userDisplay" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="userDisplay" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="gearIcon" alignment="0" min="-2" max="-2" attributes="0"/>
+                          </Group>
                           <Component id="jButton1" alignment="0" max="32767" attributes="0"/>
-                          <Component id="logInButton" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                       <Component id="controllerDisplay" max="32767" attributes="0"/>
@@ -409,12 +443,17 @@
         </DimensionLayout>
       </Layout>
     </Container>
-    <Component class="javax.swing.JButton" name="logInButton">
+    <Component class="javax.swing.JLabel" name="gearIcon">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Log in"/>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="66" green="ff" red="66" type="rgb"/>
+        </Property>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/inventorymanagementsystem/Images/settings.png"/>
+        </Property>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="logInButtonActionPerformed"/>
+        <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="gearIconMousePressed"/>
       </Events>
     </Component>
   </SubComponents>
