--- a/InventoryManagementSystem/src/inventorymanagementsystem/IMSGUI.form
+++ b/InventoryManagementSystem/src/inventorymanagementsystem/IMSGUI.form
@@ -190,9 +190,9 @@
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="1" max="-2" attributes="0">
                           <Component id="jTextField1" alignment="0" max="32767" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="userDisplay" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="gearIcon" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="userDisplay" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="jButton1" alignment="0" max="32767" attributes="0"/>
                       </Group>
